# EasyMath

./: CMakeLists.txt  README.md  genCov.sh  hello.cpp
.github/workflows/: test.yml
coverage/: cov  cov-EasyMath.gcda  cov-EasyMath.gcno
coverage/reports/: Circle.cpp.gcov  Circle.hpp.gcov  Cube.cpp.gcov  Cube.hpp.gcov  Cylinder.cpp.gcov  Cylinder.hpp.gcov  EasyMath.cpp.gcov  Hexagon.cpp.gcov  Hexagon.hpp.gcov  HexagonalPrism.cpp.gcov  HexagonalPrism.hpp.gcov  Integration.cpp.gcov  Parallelogram.cpp.gcov  Parallelogram.hpp.gcov  Pentagon.cpp.gcov  Pentagon.hpp.gcov  PentagonalPrism.cpp.gcov  PentagonalPrism.hpp.gcov  Pyramid.cpp.gcov  Pyramid.hpp.gcov  Rectangle.cpp.gcov  Rectangle.hpp.gcov  RectangularParallelipiped.cpp.gcov  RectangularParallelipiped.hpp.gcov  Sphere.cpp.gcov  Sphere.hpp.gcov  Square.cpp.gcov  Square.hpp.gcov  Trapeze.cpp.gcov  Trapeze.hpp.gcov  Triangle.cpp.gcov  Triangle.hpp.gcov  TriangularPrism.cpp.gcov  coverage.info  (+20 more)
lib/: Circle.hpp  Cube.hpp  Cylinder.hpp  EasyMath.hpp  Hexagon.hpp  HexagonalPrism.hpp  Parallelogram.hpp  Pentagon.hpp  PentagonalPrism.hpp  Pyramid.hpp  Rectangle.hpp  RectangularParallelipiped.hpp  RectangularPrallelipiped.hpp  Sphere.hpp  Square.hpp  Trapeze.hpp  Triangle.hpp  TriangularPrism.hpp  easymath.hpp
tests/: Circle.cpp  Cube.cpp  Cylinder.cpp  EasyMath.cpp  Hexagon.cpp  HexagonalPrism.cpp  Integration.cpp  Parallelogram.cpp  Pentagon.cpp  PentagonalPrism.cpp  Pyramid.cpp  Rectangle.cpp  RectangularParallelipiped.cpp  RectangularPrallelipiped.cpp  Sphere.cpp  Square.cpp  Trapeze.cpp  Triangle.cpp  TriangularPrism.cpp
